More ugly hacks to work around InternetExplorer problems: IE does not compute Z-order properly which results in drop down menu displayed behind the tab navigation. Added _z-index: 500 which is only visible to IE (another bug makes IE to accept CSS properties starting with underscore). The net result is that FF, Opera et al. work OK even if screen is narrow and menu wraps. IE works correctly if menu is not wrapped. See: http://wellstyled.com/css-underscore-hack.html http://annevankesteren.nl/2005/06/z-index
git-svn-id: http://scm.sipfoundry.org/rep/sipX/main@9089 a612230a-c5fa-0310-af8b-88eea846685b

--- a/sipXconfig/web/src/org/sipfoundry/sipxconfig/site/skin/layout.css
+++ b/sipXconfig/web/src/org/sipfoundry/sipxconfig/site/skin/layout.css
@@ -153,7 +153,6 @@ div.shadow
 {
 	margin: 0;
 	padding: 0;
-    z-index: 500;
 }
 
 #navigation li {
@@ -163,6 +162,8 @@ div.shadow
 	text-align:center;
 	margin: 0;
 	padding: 0;
+	/* IE explorer only - working around Z-index bug */
+    _z-index: 500;
 }
 
 #navigation li ul {
@@ -182,6 +183,7 @@ div.shadow
 #navigation li:hover ul,
 #navigation li.over ul { 
 	display: block; 
+    z-index: 500;
 }
 
 #navigation a {
